Correção de bug no posicionamento da seta de collapsable da navbar.

--- a/public/css/layouts/sidebar.css
+++ b/public/css/layouts/sidebar.css
@@ -1,5 +1,9 @@
 .sidebar .dropdown-toggle { outline: 0; }
 
+.sidebar li {
+  position: relative; /* Necessário para o posicionamento absoluto funcionar dentro do contexto */
+}
+
 .sidebar .btn-toggle {
   font-weight: 600;
   color: var(--bs-emphasis-color);
@@ -12,25 +16,25 @@
   background-color: var(--bs-tertiary-bg);
 }
 
-.sidebar .btn-toggle::before {
+.sidebar .btn-toggle::after {
   width: 1.25em;
   line-height: 0;
   content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
   transition: transform .35s ease;
   transform-origin: .5em 50%;
   position: absolute;
-  right: 1.8em;
+  right: 0;
   transform: rotate(90deg);
 }
 
-[data-bs-theme="dark"] .sidebar .btn-toggle::before {
+[data-bs-theme="dark"] .sidebar .btn-toggle::after {
   content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%28255,255,255,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
 }
 
 .sidebar .btn-toggle[aria-expanded="true"] {
   color: rgba(var(--bs-emphasis-color-rgb), .85);
 }
-.sidebar .btn-toggle[aria-expanded="true"]::before {
+.sidebar .btn-toggle[aria-expanded="true"]::after {
   transform: rotate(-90deg);
 }
 
